# kr-translator

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kr_translator/: caller.py  exceptions.py  translator.py
tests/: conftest.py
tests/kr_translator/: test_caller.py  test_translator.py
tests/resources/: test_file.txt  test_sound_effect.txt
