[tool.poetry]
name = "kr-translator"
version = "0.1.5"
description = "Translate korean text"
authors = ["zlood"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.3"
langchain-huggingface = "^0.1.0"
transformers = "^4.44.0"
sentencepiece = "^0.2.0"
protobuf = "^5.27.3"
langchain-google-genai = "^2.0.1"
langsmith = "^0.1.136"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -q -m 'not call_openai'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = """
    call_openai: mark tests that call OpenAI APIs
"""